--- a/Help.html
+++ b/Help.html
@@ -1,28 +1,18 @@
 <!DOCTYPE html>
-<html style="background-color: lightgreen;">
+<html>
     <head>
         <title>SAMSCON</title>
-        <style>
-            button {
-                display: inline;
-                width: 80px;
-                height: 30px;
-                background-color: black;
-                margin: auto 30px;
-                padding: 5px;
-                color: blue;
-                font-size: 18px;
-                font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-                border-radius: 6px;
-            }
-        </style>
+        <meta name="viewport" content="width=device-width, initial scale= 1.0;">
+        <link rel="stylesheet" href="samscon.css">
     </head>
     <body style="text-align: center;">
-    <hr />
-       <button onclick="document.location='Index.html'">HOME</button>
-        <button onclick="document.location='About.html'">ABOUT</button>
-        <button onclick="document.location='News.html'">NEWS</button>
-        <button onclick="document.location='Help.html'">HELP</button>
+        <nav id="nav">
+            <a href="Index.html">HOME</a>
+            <a href="About.html">ABOUT</a>
+            <a href="News.html">NEWS</a>
+            <a href="Help.html">HELP</a>
+            <a href="cons.html">SIGN-UP</a>
+        </nav>
         <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">You're finding it hard to move around and get started with 'SAMSCON', well you're in the right place</h1>
         <hr />
         <H1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">1. Home: This is where you find out where to get other search engines and get started from there right on to the profession of being a web programmer or being an engineer.</H1>
@@ -34,7 +24,7 @@
         <H1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">4. Help: This is where you are right now to get all the information you need about 'SAMSCON'.</H1>
         <hr />
         <h1 style="font-family: Arial, Helvetica, sans-serif;">TO KNOW MORE ABOUT SAMSCON TAP THE BUTTON BELOW "SAMSCON"</h1>
-        <button onclick="document.location='SAMSCON.html'" style="background-color: green; font-size: 200%; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; width: 25%;">SAMSCON</button>
+        <A onclick="href='SAMSCON.html'" style="background-color: green; font-size: 200%; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; width: 25%;" class="dan" title="Tap the button to know more about Samscon">SAMSCON</A>
         <hr />
         <H1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;" style="font-size: 400%;">SAMSCON AT YOUR SERVICE !!!</H1>
     </body>
