--- a/News.html
+++ b/News.html
@@ -1,28 +1,18 @@
 <!DOCTYPE html>
-<html style="background-color: gold;">
+<html>
     <head>
         <title>SAMSCON</title>
-        <style>
-            button {
-                display: inline;
-                width: 80px;
-                height: 30px;
-                background-color: black;
-                margin: auto 30px;
-                padding: 5px;
-                color: blue;
-                font-size: 18px;
-                font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-                border-radius: 6px;
-            }
-        </style>
+        <meta name="viewport" content="width=device-width, initial scale= 1.0;">
+        <link rel="stylesheet" href="samscon.css">
     </head>
     <body style="text-align: center;">
-    <hr />
-       <button onclick="document.location='Index.html'">HOME</button>
-        <button onclick="document.location='About.html'">ABOUT</button>
-        <button onclick="document.location='News.html'">NEWS</button>
-        <button onclick="document.location='Help.html'">HELP</button>
+    <nav id="nav">
+            <a href="Index.html">HOME</a>
+            <a href="About.html">ABOUT</a>
+            <a href="News.html">NEWS</a>
+            <a href="Help.html">HELP</a>
+            <a href="cons.html">SIGN-UP</a>
+        </nav>
         <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">CAR DEVELOPMENTS ARE REALLY EVOLVING</h1>
         <img src="/images/car 2.jpg" />
         <img src="/images/car 1.jpg" />
