--- a/Samscon.html
+++ b/Samscon.html
@@ -1,38 +1,32 @@
 <!DOCTYPE html>
-<html style="background-color: green;" COntent="width=device-width">
+<html>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
+        <!-- Link to the favicon -->
+        <link rel="icon" href="/images/Logo.png" type="image/x-icon">
         <title>SAMSCON</title>
-        <style>
-            button {
-                display: inline;
-                width: 80px;
-                height: 30px;
-                background-color: black;
-                margin: auto 30px;
-                padding: 5px;
-                color: blue;
-                font-size: 18px;
-                font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-                border-radius: 6px;
+        <link rel="stylesheet" href="samscon.css" style="border-radius: 100px;">
+         <style>
+            img {
+                border-radius: 50px;
             }
-        </style>
+         </style>
     </head>
     <body style="text-align: center;">
-      </div>
-         <input id="input" class="truncate" type="search" autocomplete="off" spellcheck="false" role="combobox" aria-controls="matches" aria-expanded="false" aria-description="" placeholder="Search SAMSCON or type a URL" aria-live="polite">
-         <hr />
-         <button onclick="document.location='Index.html'">HOME</button>
-        <button onclick="document.location='About.html'">ABOUT</button>
-        <button onclick="document.location='News.html'">NEWS</button>
-        <button onclick="document.location='Help.html'">HELP</button>
+        <nav id="nav">
+            <a href="Index.html">HOME</a>
+            <a href="About.html">ABOUT</a>
+            <a href="News.html">NEWS</a>
+            <a href="Help.html">HELP</a>
+            <a href="cons.html">SIGN-UP</a>
+        </nav>
         <H1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">THIS IS <ins>"SAMSCON"</ins> A PLACE FOR YOUNG ENGINEERS AND CODERS ALL AROUND THE WORLD TO LEARN</H1>
         <HR />
         <P>SAMSCON is a place where learning and <ins>RESEARCH</ins> is free.</P>
         <h2 style="color: red;" 
         style="font-size: 200%;"></h2>
-        <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">"IF YOU'RE READY TO LEARN ENGINEERING/CODING OR GET FREE SEARCH ENGINES TO GET FREE RESEARCH <ins>SAMSCON</ins> IS YOUR DESTINATION"</H2>
-            <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;">We are the ones ready to train future web developers and future engineers that is why we say "SAMSCON, EMPOWERING FUTURE INNOVATORS"</h1>
-            <a href="/images/Logo.png"><img src="/images/Logo.png" /></a>
+        <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;">We are the ones ready to train future web developers and future engineers that is why we say "SAMSCON, EMPOWERING FUTURE INNOVATORS"</h1>
+            <img src="/images/Logo.png" draggable="false" /></a>
             <HR />
             <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">SAMSCON AT YOUR SERVICE !!!</h1>
     </body>
