--- a/About.html
+++ b/About.html
@@ -1,42 +1,27 @@
 <!DOCTYPE html>
-<html style="background-color: rgb(0, 128, 96);">
+<html>
     <head>
         <title>SAMSCON</title>
-        <style>
-            button {
-                display: inline;
-                width: 80px;
-                height: 30px;
-                background-color: black;
-                margin: auto 30px;
-                padding: 5px;
-                color: blue;
-                font-size: 18px;
-                font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-                border-radius: 6px;
-            }
-            .dan {
-              font-size: 200%; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; width: 25px;
-              color: black;
-              height: 50px;
-            }
-        </style>
+        <meta name="viewport" content="width=device-width, initial scale= 1.0;">
+        <link rel="stylesheet" href="samscon.css">
     </head>
     <body style="text-align: center;">
-      <hr />
-       <button onclick="document.location='Index.html'">HOME</button>
-        <button onclick="document.location='About.html'">ABOUT</button>
-        <button onclick="document.location='News.html'">NEWS</button>
-        <button onclick="document.location='Help.html'">HELP</button>
+      <nav id="nav">
+            <a href="Index.html">HOME</a>
+            <a href="About.html">ABOUT</a>
+            <a href="News.html">NEWS</a>
+            <a href="Help.html">HELP</a>
+            <a href="cons.html">SIGN-UP</a>
+        </nav>
         <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Welcome </h2>
         <h1 style="font-family: Arial, Helvetica, sans-serif;">TO KNOW MORE ABOUT SAMSCON TAP THE BUTTON BELOW "SAMSCON"</h1>
-        <button onclick="document.location='SAMSCON.html'" style="background-color: green; font-size: 200%; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; width: 25%;" class="dan">SAMSCON</button>
+        <A onclick="href='SAMSCON.html'" style="background-color: green; font-size: 200%; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; width: 25%;" class="dan" title="Tap the button to know more about Samscon">SAMSCON</A>
         <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">This web page is mainly designed for upcoming engineers for automobiles!!</h2>
-        <a href="https://cursa.app/" style="background-color: white;">Visit cursa app</a>
+        <a href="https://cursa.app/" style="background-color: white;" title="Visit cursa app" >Visit cursa app</a>
         <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Click "CURSA APP" for more information/ training and certificate for engineering.</h2>
         <hr />
         <h2 style="font-family: Arial, Helvetica, sans-serif;">Good news for gamers cause for free games click "GAMETOP"</h2>
-          <button onclick="document.location='http://www.gametop.com'" style="background-color: gold; font-size: 200%; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; width: 25%;" class="dan">GAMETOP</button>
+          <A onclick="href='http://www.gametop.com'" style="background-color: gold; font-size: 200%; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; width: 25%;" class="dan" title="Get Free games">GAMETOP</A>
         <HR />
             <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">SAMSCON AT YOUR SERVICE !!!</h1>
     </body>
