--- a/Index.html
+++ b/Index.html
@@ -4,33 +4,89 @@
         <title>SAMSCON</title>
         <meta name="viewport" content="width=device-width, initial scale= 1.0;">
         <link rel="stylesheet" href="samscon.css">
+        <link rel="icon" href="/images/Logo.png" type="image/x-icon">
     </head>
     <body style="text-align: center;">
-        <nav id="nav">
-            <a href="Index.html">HOME</a>
-            <a href="About.html">ABOUT</a>
-            <a href="News.html">NEWS</a>
-            <a href="Help.html">HELP</a>
-            <a href="cons.html">SIGN-UP</a>
-        </nav>
-        <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">THIS WEB PAGE WAS CREATED BY SAMUEL IK(FOUDER OF SAMSCON)</h1>
-        <HR />
-        <P style="font-size: 200%;">What do you want to do today?</P>
-        <h2 style="font-family: Arial, Helvetica, sans-serif;">You want to check some things out on google, just tap "visit google" or "visit edge"</h2>
-        <a href="http://google.com" style="background-color: white;">Visit google</a>
-        <hr />
-        <a href="http://www.bing.com" style="background-color: white;">Visit edge</a>
-        <hr />
-        <h3 style="font-size: 200%; font-family: Arial, Helvetica, sans-serif;">Or do you want to learn a lot about computers</h3>
-        <a href="http://novaita.com" style="background-color: white;">Visit Nova IT Academy</a>
-        <hr />
-        <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">This web page is mainly designed for upcoming engineers for automobiles!!</h2>
-        <a href="https://cursa.app/" style="background-color: white;">Visit cursa app</a>
-        <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Click "CURSA APP" for more information/ training and certificate for engineering.</h2>
-        <hr />
-        <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">You can also click on "Visit W3Schools.com" for other coding leasons</h2>
-        <a href="https://www.w3schools.com/" style="background-color: white;">Visit W3Schools</a>
-        <HR />
-            <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">SAMSCON AT YOUR SERVICE !!!</h1>
+        <header class="head">
+            <div class="title">
+                <h2>
+                    Sams<span>con</span>
+                </h2>
+            </div>
+            <div>
+                <nav id="nav">
+                    <a href="Index.html" id="links">HOME</a>
+                    <a href="About.html" id="links">ABOUT</a>
+                    <a href="News.html" id="links">NEWS</a>
+                    <a href="Help.html" id="links">HELP</a>
+                    <a href="cons.html" id="links">SIGN-UP</a>
+                    <a href="contact.html" id="links">Contact</a>
+                </nav>
+            </div>
+            <div class="burger-icon">
+                <a href="">
+                    <p class="icon">&#9776;</p>
+                </a>
+                <div class="dropdown">
+                    <nav id="nav">
+                        <a href="Index.html" id="link">HOME</a>
+                        <a href="About.html" id="link">ABOUT</a>
+                        <a href="News.html" id="link">NEWS</a>
+                        <a href="Help.html" id="link">HELP</a>
+                        <a href="cons.html" id="link">SIGN-UP</a>
+                        <a href="contact.html" id="link">Contact</a>
+                    </nav>
+                    
+                </div>
+            </div>
+        </header>
+        <main>
+            <section class="hero">
+                <div class="hero-main">
+                    <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">THIS WEB PAGE WAS CREATED BY SAMUEL IK(FOUNDER OF SAMSCON)</h1>
+                </div>
+                <HR />
+            </section>
+            <section class="search">
+                <div class="search-title">
+                    <P style="font-size: 200%;">What do you want to do today?</P>
+                </div>
+                <div class="search-text">
+                    <h2 style="font-family: Arial, Helvetica, sans-serif;">You want to check some things out on google, just tap "visit google" or "visit edge"</h2>
+                </div>
+                <div class="search-links">
+                    <a href="http://google.com" style="background-color: white;" class="google">Visit google</a>
+                    <hr />
+                    <a href="http://www.bing.com" style="background-color: white;" class="edge">Visit edge</a>
+                    <hr />
+                </div>
+            </section>
+            <section class="code">
+                <div class="code-content">
+                    <h3 style="font-size: 200%; font-family: Arial, Helvetica, sans-serif;">Or do you want to learn a lot about computers</h3>
+                    <a href="http://novaita.com" style="background-color: white;">Visit Nova IT Academy</a>
+                    <hr />
+                </div>
+                <div class="code-content">
+                    <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">You can also click on "Visit W3Schools.com" for other coding leasons</h2>
+                    <a href="https://www.w3schools.com/" style="background-color: white;">Visit W3Schools</a>
+                </div>
+            </section>
+            <section class="engineer">
+                <div class="engineer-content">
+                    <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">This web page is mainly designed for upcoming engineers for automobiles!!</h2>
+                </div>
+                <div class="engineer-content2">
+                    <a href="https://cursa.app/" style="background-color: white;">Visit cursa app</a>
+                    <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Click "CURSA APP" for more information/ training and certificate for engineering.</h2>
+                    <hr />
+                </div>
+            </section>
+            <section class="footer">
+                <div class="footer-content">
+                    <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">&copy; SAMSCON AT YOUR SERVICE !!!</h1>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
