--- a/News.html
+++ b/News.html
@@ -4,48 +4,85 @@
         <title>SAMSCON</title>
         <meta name="viewport" content="width=device-width, initial scale= 1.0;">
         <link rel="stylesheet" href="samscon.css">
+        <link rel="icon" href="/images/Logo.png" type="image/x-icon">
     </head>
     <body style="text-align: center;">
-    <nav id="nav">
-            <a href="Index.html">HOME</a>
-            <a href="About.html">ABOUT</a>
-            <a href="News.html">NEWS</a>
-            <a href="Help.html">HELP</a>
-            <a href="cons.html">SIGN-UP</a>
-        </nav>
-        <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">CAR DEVELOPMENTS ARE REALLY EVOLVING</h1>
-        <img src="/images/car 2.jpg" />
-        <img src="/images/car 1.jpg" />
-        <HR />
-        <img src="/images/car3.jpg" />
-        <img src="/images/car 4.jpg" />
-        <HR />
-        <img src="/images/car 5.jpg" />
-        <HR />
-        <img src="/images/car 6.jpg" />
-        <img src="/images/download (1).jpg" />
-        <hr />
-        <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">CAN YOU JUST LOOK AT THOSE DEVELOPMENTS TAKING OFF !!!</h1>
-        <hr />
-        <hr />
-        <h3 style="font-size: 300%;font-family: Arial, Helvetica, sans-serif;">THE TOP FIVE FASTEST CARS IN THE WORLD CURRENTLY ARE:</h3>
-        <hr />
-        <img src="/images/CAR.jpg" width="600" />
-        <pre style="font-size: 150%;">
-            1. 2023 Koenigsegg Jesko Absolut
+    <header class="head">
+            <div class="title">
+                <h2>
+                    Sams<span>con</span>
+                </h2>
+            </div>
+            <div>
+                <nav id="nav">
+                    <a href="Index.html" id="link">HOME</a>
+                    <a href="About.html" id="link">ABOUT</a>
+                    <a href="News.html" id="link">NEWS</a>
+                    <a href="Help.html" id="link">HELP</a>
+                    <a href="cons.html" id="link">SIGN-UP</a>
+                    <a href="contact.html" id="link">Contact</a>
+                </nav>
+            </div>
+            <div class="burger-icon">
+                <a href="#link">
+                    <img src="/images/Assets/burger-icon.svg" alt="Menu" class="icon">
+                </a>
+            </div>
+        </header>
 
-            2. 2022 Bugatti Chiron Super Sport
-
-            3. 2023 Koenigsegg Jesko Attack
-
-            4. 2020 SSC Tuatara
-
-            5. 025 Bugatti W16 Mistral
-        </pre>
-        <a href="http://www.encycarpedia.com/top/fastest-cars" style="background-color: white;">Visit encycarpedia</a>
-        <h3>To know more about the fastest cars in the world click "Visit encycarpedia"</h3>
-         <a href="http://microsoft.com/edge/surf" style="background-color: white;">Play game</a>
-         <HR />
-            <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">SAMSCON AT YOUR SERVICE !!!</h1>
+        <main>
+            <section class="news">
+                <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">CAR DEVELOPMENTS ARE REALLY EVOLVING</h1>
+            </section>
+            <section class="news">
+                <div class="news-content1">
+                    <img src="/images/car 2.jpg" />
+                    <img src="/images/car 1.jpg" />
+                    <HR />
+                </div>
+                <div class="news-content2">
+                    <img src="/images/car3.jpg" />
+                    <img src="/images/car 4.jpg" />
+                    <HR />
+                </div>
+                <div class="news-content3">
+                    <img src="/images/car 5.jpg" />
+                </div>
+                <div class="news-content4">
+                    <img src="/images/car 6.jpg" />
+                    <img src="/images/download (1).jpg" />
+                    <hr />
+                </div>
+                <div class="news-content5">
+                    <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">CAN YOU JUST LOOK AT THOSE DEVELOPMENTS TAKING OFF !!!</h1>
+                    <hr />
+                </div>
+            </section>
+            <section class="fast">
+                <div class="fast-content1">
+                    <h3 style="font-size: 200%;font-family: Arial, Helvetica, sans-serif;">THE TOP FIVE FASTEST CARS IN THE WORLD CURRENTLY ARE:</h3>
+                    <hr />
+                    <img src="/images/CAR.jpg" width="600" />
+                </div>
+                <div class="fast-content2">
+                    <p>1. 2023 Koenigsegg Jesko Absolut</p>
+                    <p>2. 2022 Bugatti Chiron Super Sport</p>
+                    <p>3. 2023 Koenigsegg Jesko Attack</p>
+                    <p>4. 2020 SSC Tuatara</p>
+                    <p>5. 025 Bugatti W16 Mistral</p>
+                    <a href="http://www.encycarpedia.com/top/fastest-cars" style="background-color: white;">Visit encycarpedia</a>
+                    <h3>To know more about the fastest cars in the world click "Visit encycarpedia"</h3>
+                     <a href="http://microsoft.com/edge/surf" style="background-color: white;">Play game</a>
+                     <HR />
+                </div>
+                <hr />
+            </section>
+        </main>
+        
+             <section class="footer">
+                <div class="footer-content">
+                    <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">SAMSCON AT YOUR SERVICE !!!</h1>
+                </div>
+            </section>
     </body>
 </html>
