--- a/contact.html
+++ b/contact.html
@@ -36,25 +36,16 @@
                 </div>
                 <HR />
             </section>
-            <section class="code">
-                <div class="code-about">
-                    <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Welcome </h2>
-                    <h1 style="font-family: Arial, Helvetica, sans-serif;">TO KNOW MORE ABOUT SAMSCON TAP THE BUTTON BELOW "SAMSCON"</h1>
-                    <A href="SAMSCON.html" style="background-color: green; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;" class="dan" title="Tap the button to know more about Samscon">SAMSCON</A>
+            <section class="contact">
+                <div>
+                    <form class="send">
+                        <input type="text" placeholder="Firstname" required>
+                        <input type="text" placeholder="Lastname" required>
+                        <input type="email" placeholder="Email" required>
+                        <textarea name="" class="email" placeholder="Write your feedback here"></textarea>
+                        <a href="mailto:samuelikennaelijah@gmail.com" class="dan" onclick="alert('Thanks for your feedback')" style="background-color: green; color: aliceblue;">Send email</a>
+                    </form>
                 </div>
-                <div class="code-about2"> 
-                    <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">This web page is mainly designed for upcoming engineers for automobiles!!</h2>
-                    <a href="https://cursa.app/" style="background-color: white;" title="Visit cursa app" >Visit cursa app</a>
-                    <h2 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">Click "CURSA APP" for more information/ training and certificate for engineering.</h2>
-                    <hr />
-                </div>
-            </section>
-            <section class="game">
-              <div class="game-content">
-                  <h2 style="font-family: Arial, Helvetica, sans-serif;">Good news for gamers cause for free games click "GAMETOP"</h2>
-                  <A href="http://www.gametop.com" style="background-color: gold; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;" class="dan" title="Get Free games">GAMETOP</A>
-                <HR />
-              </div>
             </section>
             <section class="footer">
                 <div class="footer-content">
