--- a/Help.html
+++ b/Help.html
@@ -4,18 +4,37 @@
         <title>SAMSCON</title>
         <meta name="viewport" content="width=device-width, initial scale= 1.0;">
         <link rel="stylesheet" href="samscon.css">
+        <link rel="icon" href="/images/Logo.png" type="image/x-icon">
     </head>
     <body style="text-align: center;">
-        <nav id="nav">
-            <a href="Index.html">HOME</a>
-            <a href="About.html">ABOUT</a>
-            <a href="News.html">NEWS</a>
-            <a href="Help.html">HELP</a>
-            <a href="cons.html">SIGN-UP</a>
-        </nav>
-        <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">You're finding it hard to move around and get started with 'SAMSCON', well you're in the right place</h1>
-        <hr />
-        <H1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">1. Home: This is where you find out where to get other search engines and get started from there right on to the profession of being a web programmer or being an engineer.</H1>
+        <header class="head">
+            <div class="title">
+                <h2>
+                    Sams<span>con</span>
+                </h2>
+            </div>
+            <div>
+                <nav id="nav">
+                    <a href="Index.html" id="link">HOME</a>
+                    <a href="About.html" id="link">ABOUT</a>
+                    <a href="News.html" id="link">NEWS</a>
+                    <a href="Help.html" id="link">HELP</a>
+                    <a href="cons.html" id="link">SIGN-UP</a>
+                    <a href="contact.html" id="link">Contact</a>
+                </nav>
+            </div>
+            <div class="burger-icon">
+                <a href="#link">
+                    <img src="/images/Assets/burger-icon.svg" alt="Menu" class="icon">
+                </a>
+            </div>
+        </header>
+        <section class="hero">
+            <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">You're finding it hard to move around and get started with 'SAMSCON', well you're in the right place</h1>
+            <hr />
+        </section>
+        <section style="background-color: coral; display: flex; flex-direction: column; align-items: center; justify-content: space-between;">
+            <H1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">1. Home: This is where you find out where to get other search engines and get started from there right on to the profession of being a web programmer or being an engineer.</H1>
         <hr />
         <H1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">2. About: This is where you learn more about 'SAMSCON', coding and engineering as a profession.</H1>
         <hr />
@@ -24,8 +43,14 @@
         <H1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">4. Help: This is where you are right now to get all the information you need about 'SAMSCON'.</H1>
         <hr />
         <h1 style="font-family: Arial, Helvetica, sans-serif;">TO KNOW MORE ABOUT SAMSCON TAP THE BUTTON BELOW "SAMSCON"</h1>
-        <A onclick="href='SAMSCON.html'" style="background-color: green; font-size: 200%; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; width: 25%;" class="dan" title="Tap the button to know more about Samscon">SAMSCON</A>
+        <A onclick="href='SAMSCON.html'" style="background-color: green;" class="dan" title="Tap the button to know more about Samscon">SAMSCON</A>
         <hr />
-        <H1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;" style="font-size: 400%;">SAMSCON AT YOUR SERVICE !!!</H1>
+        </section>
+        <section class="footer">
+            <div class="footer-content">
+                <H1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;" style="font-size: 400%;">SAMSCON AT YOUR SERVICE !!!</H1>
+            </div>
+            
+        </section>
     </body>
 </html>
