--- a/Samscon.html
+++ b/Samscon.html
@@ -13,21 +13,42 @@
          </style>
     </head>
     <body style="text-align: center;">
-        <nav id="nav">
-            <a href="Index.html">HOME</a>
-            <a href="About.html">ABOUT</a>
-            <a href="News.html">NEWS</a>
-            <a href="Help.html">HELP</a>
-            <a href="cons.html">SIGN-UP</a>
-        </nav>
+        <!-- <h1 class="head">Welcome To Samscon</h1> -->
+        <header class="head">
+            <div class="title">
+                <h2>
+                    Sams<span>con</span>
+                </h2>
+            </div>
+            <div>
+                <nav id="nav">
+                    <a href="Index.html" id="link">HOME</a>
+                    <a href="About.html" id="link">ABOUT</a>
+                    <a href="News.html" id="link">NEWS</a>
+                    <a href="Help.html" id="link">HELP</a>
+                    <a href="cons.html" id="link">SIGN-UP</a>
+                    <a href="contact.html" id="link">Contact</a>
+                </nav>
+            </div>
+            <div class="burger-icon">
+                <a href="#link">
+                    <img src="/images/Assets/burger-icon.svg" alt="Menu" class="icon">
+                </a>
+            </div>
+        </header>
         <H1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">THIS IS <ins>"SAMSCON"</ins> A PLACE FOR YOUNG ENGINEERS AND CODERS ALL AROUND THE WORLD TO LEARN</H1>
         <HR />
         <P>SAMSCON is a place where learning and <ins>RESEARCH</ins> is free.</P>
         <h2 style="color: red;" 
         style="font-size: 200%;"></h2>
         <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;">We are the ones ready to train future web developers and future engineers that is why we say "SAMSCON, EMPOWERING FUTURE INNOVATORS"</h1>
-            <img src="/images/Logo.png" draggable="false" /></a>
-            <HR />
-            <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">SAMSCON AT YOUR SERVICE !!!</h1>
+        <img src="/images/Logo.png" draggable="false" /></a>
+        <HR />
+        <section class="footer">
+            <div class="footer-content">
+                <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">SAMSCON AT YOUR SERVICE !!!</h1>
+            </div>
+        </section>
+        
     </body>
 </html>
