--- a/Index.html
+++ b/Index.html
@@ -23,18 +23,30 @@
                     <a href="contact.html" id="links">Contact</a>
                 </nav>
             </div>
-            <div class="burger-icon">
+            <div class="container">
+                <span id="hours">00</span>
+                <span>:</span>
+                <span id="minutes">00</span>
+                <span>:</span>
+                <span id="seconds">00</span>
+                <span id="session">AM</span>
+
+                <script src="clock.js"></script>
+            </div>
+            <div class="dropdown">
                 <a href="">
                     <p class="icon">&#9776;</p>
                 </a>
-                <div class="dropdown">
+                <div class="dropdown-content">
                     <nav id="nav">
-                        <a href="Index.html" id="link">HOME</a>
-                        <a href="About.html" id="link">ABOUT</a>
-                        <a href="News.html" id="link">NEWS</a>
-                        <a href="Help.html" id="link">HELP</a>
-                        <a href="cons.html" id="link">SIGN-UP</a>
-                        <a href="contact.html" id="link">Contact</a>
+                        <ul>
+                            <a href="Index.html" id="link">HOME</a>
+                            <a href="About.html" id="link">ABOUT</a>
+                            <a href="News.html" id="link">NEWS</a>
+                            <a href="Help.html" id="link">HELP</a>
+                            <a href="cons.html" id="link">SIGN-UP</a>
+                            <a href="contact.html" id="link">Contact</a>
+                        </ul>
                     </nav>
                     
                 </div>
