--- a/Samscon.html
+++ b/Samscon.html
@@ -14,41 +14,69 @@
     </head>
     <body style="text-align: center;">
         <!-- <h1 class="head">Welcome To Samscon</h1> -->
-        <header class="head">
-            <div class="title">
-                <h2>
-                    Sams<span>con</span>
-                </h2>
-            </div>
-            <div>
-                <nav id="nav">
-                    <a href="Index.html" id="link">HOME</a>
-                    <a href="About.html" id="link">ABOUT</a>
-                    <a href="News.html" id="link">NEWS</a>
-                    <a href="Help.html" id="link">HELP</a>
-                    <a href="cons.html" id="link">SIGN-UP</a>
-                    <a href="contact.html" id="link">Contact</a>
-                </nav>
-            </div>
-            <div class="burger-icon">
-                <a href="#link">
-                    <img src="/images/Assets/burger-icon.svg" alt="Menu" class="icon">
-                </a>
-            </div>
-        </header>
-        <H1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">THIS IS <ins>"SAMSCON"</ins> A PLACE FOR YOUNG ENGINEERS AND CODERS ALL AROUND THE WORLD TO LEARN</H1>
-        <HR />
-        <P>SAMSCON is a place where learning and <ins>RESEARCH</ins> is free.</P>
-        <h2 style="color: red;" 
-        style="font-size: 200%;"></h2>
-        <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;">We are the ones ready to train future web developers and future engineers that is why we say "SAMSCON, EMPOWERING FUTURE INNOVATORS"</h1>
-        <img src="/images/Logo.png" draggable="false" /></a>
-        <HR />
-        <section class="footer">
-            <div class="footer-content">
-                <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">SAMSCON AT YOUR SERVICE !!!</h1>
-            </div>
-        </section>
+        <main>
+            <header class="head">
+                <div class="title">
+                    <h2>
+                        Sams<span>con</span>
+                    </h2>
+                </div>
+                <div>
+                    <nav id="nav">
+                        <a href="Index.html" id="link">HOME</a>
+                        <a href="About.html" id="link">ABOUT</a>
+                        <a href="News.html" id="link">NEWS</a>
+                        <a href="Help.html" id="link">HELP</a>
+                        <a href="cons.html" id="link">SIGN-UP</a>
+                        <a href="contact.html" id="link">Contact</a>
+                    </nav>
+                </div>
+                <div class="container">
+                    <span id="hours">00</span>
+                    <span>:</span>
+                    <span id="minutes">00</span>
+                    <span>:</span>
+                    <span id="seconds">00</span>
+                    <span id="session">AM</span>
+
+                    <script src="clock.js"></script>
+                </div>
+                <div class="burger-icon">
+                    <a href="">
+                        <p class="icon">&#9776;</p>
+                    </a>
+                </div>
+            </header>
+            <section class="hero">
+                <div class="hero-main">
+                    <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">THIS WEB PAGE WAS CREATED BY SAMUEL IK(FOUNDER OF SAMSCON)</h1>
+                </div>
+                <HR />
+            </section>
+            <section class="samscon-hero">
+                <div class="samscon-hero-content">
+                    <H1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">THIS IS <ins>"SAMSCON"</ins> A PLACE FOR YOUNG ENGINEERS AND CODERS ALL AROUND THE WORLD TO LEARN</H1>
+                    <HR />
+                </div>
+            </section>
+
+            <section class="sam">
+                <div class="sam-text">
+                    <P>SAMSCON is a place where learning and <ins>RESEARCH</ins> is free.</P>
+                    <h1>We are the ones ready to train future web developers and future engineers that is why we say "SAMSCON, EMPOWERING FUTURE INNOVATORS"</h1>
+                </div>
+                <div class="sam-img">
+                    <img src="/images/Logo.png" draggable="false">
+                    <HR />
+                </div>
+            </section>
+        
+            <section class="footer">
+                <div class="footer-content">
+                    <h1 style="font-family: Verdana, Geneva, Tahoma, sans-serif;">SAMSCON AT YOUR SERVICE !!!</h1>
+                </div>
+            </section>
+        </main>
         
     </body>
 </html>
