--- a/contact.html
+++ b/contact.html
@@ -23,9 +23,19 @@
                     <a href="contact.html" id="link">Contact</a>
                 </nav>
             </div>
+            <div class="container">
+                <span id="hours">00</span>
+                <span>:</span>
+                <span id="minutes">00</span>
+                <span>:</span>
+                <span id="seconds">00</span>
+                <span id="session">AM</span>
+
+                <script src="clock.js"></script>
+            </div>
             <div class="burger-icon">
-                <a href="#link">
-                    <img src="/images/Assets/burger-icon.svg" alt="Menu" class="icon">
+                <a href="">
+                    <p class="icon">&#9776;</p>
                 </a>
             </div>
         </header>
@@ -42,7 +52,6 @@
                         <input type="text" placeholder="Firstname" required>
                         <input type="text" placeholder="Lastname" required>
                         <input type="email" placeholder="Email" required>
-                        <textarea name="" class="email" placeholder="Write your feedback here"></textarea>
                         <a href="mailto:samuelikennaelijah@gmail.com" class="dan" onclick="alert('Thanks for your feedback')" style="background-color: green; color: aliceblue;">Send email</a>
                     </form>
                 </div>
