--- a/News.html
+++ b/News.html
@@ -23,9 +23,19 @@
                     <a href="contact.html" id="link">Contact</a>
                 </nav>
             </div>
+            <div class="container">
+                <span id="hours">00</span>
+                <span>:</span>
+                <span id="minutes">00</span>
+                <span>:</span>
+                <span id="seconds">00</span>
+                <span id="session">AM</span>
+
+                <script src="clock.js"></script>
+            </div>
             <div class="burger-icon">
-                <a href="#link">
-                    <img src="/images/Assets/burger-icon.svg" alt="Menu" class="icon">
+                <a href="">
+                    <p class="icon">&#9776;</p>
                 </a>
             </div>
         </header>
